graph parser integration