@@ -1,11 +1,28 @@
 package model;
 
+import ui.Application;
+
+import javax.swing.*;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.*;
 import java.util.regex.Pattern;
 
 public class GraphParser {
+    public static String instruction ="<html><body style='width: 350px;'>" +
+            "<b>Введите граф в формате:</b><br>" +
+            "Первая строка - количество вершин<br>" +
+            "Последующие строки - вершина1 вершина2 вес<br><br>" +
+            "<b>Пример:</b><br>" +
+            "4<br>" +
+            "A B 1<br>" +
+            "A C 4<br>" +
+            "B C 2<br>" +
+            "B D 5<br>" +
+            "</body></html>";
 
-    public Graph parse(String input) throws ParseException {
+    private static Graph parse(String input) throws ParseException {
         if (input == null || input.trim().isEmpty()) {
             throw new ParseException("Пустой ввод");
         }
@@ -25,10 +42,10 @@ public class GraphParser {
         }
 
         int vertexCount = 0;
-        int startIndex = 0;
+        int startIndex;
 
         try {
-            vertexCount = Integer.parseInt(validLines.get(0));
+            vertexCount = Integer.parseInt(validLines.getFirst());
             startIndex = 1;
             System.out.println("Количество вершин: " + vertexCount);
         } catch (NumberFormatException e) {
@@ -88,10 +105,48 @@ public class GraphParser {
                     " вершин, но загружено " + graph.getVertices().size());
         }
 
-        System.out.println("Всего загружено вершин: " + graph.getVertices().size());
-        System.out.println("Всего загружено ребер: " + graph.getEdges().size());
+        System.out.println("Всего загружено вершин: " + vertexCount);
+        System.out.println("Всего загружено ребер: " + parsedEdges);
 
         return graph;
+    }
+
+    public static boolean parseAndLoad(Application application, File input) {
+        try {
+            return parseAndLoad(application, Files.readString(input.toPath()));
+        } catch (IOException ex) {
+            application.setStatus("Не удалось извлечь текст из файла");
+        }
+        return false;
+    }
+
+    public static boolean parseAndLoad(Application application, String input) {
+        try {
+            if (input.trim().isEmpty()) {
+                application.setStatus("Получен пустой текст, граф не загружен");
+                return false;
+            }
+
+            application.graph = parse(input);
+            int vertexCount = application.graph.getVertices().size();
+            int edgeCount = application.graph.getEdges().size();
+
+            application.setStatus("Загружен новый граф. Вершин: " + vertexCount + ", рёбер: " + edgeCount);
+            application.graphChanged();
+            return true;
+        } catch (ParseException ex) {
+            application.setStatus("Ошибка загрузки графа: " + ex.getMessage());
+            JOptionPane.showMessageDialog(
+                    application,
+                    "Ошибка загрузки графа:\n" + ex.getMessage() + "\n\n" + instruction,
+                    "Ошибка",
+                    JOptionPane.ERROR_MESSAGE
+            );
+            return false;
+        }  catch (Exception ex) {
+            application.setStatus("Ошибка: " + ex.getMessage());
+            return false;
+        }
     }
 
     public static class ParseException extends Exception {
